# sdk_api0202

./: CMakeLists.txt  readme.md
.trae/documents/: plan_20260201_220320.md  创建C++示例项目演示SDK和API概念.md
include/: api.h
src/: main.cpp  sdk.cpp
test/: CMakeLists.txt  test.cpp
test2/: CMakeLists.txt  test.cpp
